--- a/index.html
+++ b/index.html
@@ -703,15 +703,14 @@
                 </div>
             </div>
             <h1 class="login-title">AI SENTINEL-X</h1>
-            <p class="login-subtitle">Autonomous Cyber Defense System</p>
+            <p class="login-subtitle">Autonomous Cyber Defense Agent</p>
         </div>
 
         <!-- Agent Status Badge -->
         <div class="agent-status-badge">
             <div class="agent-status-content">
                 <div class="agent-status-title">🤖 AI AGENT READY</div>
-                <div>Autonomous Cyber Defense with Human Oversight</div>
-                <div>Quantum-Resistant Encryption Protected</div>
+                <div>Autonomous with Manual Control via AI Chat Bot</div>
             </div>
         </div>
 
@@ -905,7 +904,7 @@
                 statusMessage.textContent = '🔍 Validating API credentials...';
                 
                 setTimeout(() => {
-                    statusMessage.textContent = '🛡️ Activating quantum-resistant encryption...';
+                    statusMessage.textContent = '🛡️ Activating hybrid encryption...';
                     
                     setTimeout(() => {
                         statusMessage.textContent = '🤖 Deploying Main Agent and sub-agents...';
