--- a/network.html
+++ b/network.html
@@ -2000,7 +2000,7 @@
                     <span class="chat-status-dot"></span>
                     <span>MAIN AGENT ONLINE</span>
                 </div>
-                <span class="ai-chat-close" onclick="toggleChat()">×</span>
+                <span class="ai-chat-close">×</span>
             </div>
             <div class="cli-mode-indicator" id="cliModeIndicator">
                 ⚠️ CLI MODE - Main Agent Offline
@@ -2022,7 +2022,7 @@
                 <button class="ai-chat-send" onclick="sendChatMessage()">SEND</button>
             </div>
         </div>
-        <div class="ai-chat-toggle" onclick="toggleChat()">🤖</div>
+        <div class="ai-chat-toggle">🤖</div>
     </div>
 
     <script src="shared.js"></script>
