--- a/network.html
+++ b/network.html
@@ -391,7 +391,7 @@
             border-radius: 12px;
             padding: 20px;
             margin-bottom: 25px;
-            display: none;
+            display: flex;
             justify-content: space-between;
             align-items: center;
             flex-wrap: wrap;
